# blogic

./: .gitattributes  .gitignore  Cargo.toml  README.md  compile_shaders.sh  pack_game.sh
assets/shaders/: test.frag.spv  test.vert.spv
src/: app.rs  game.rs  logger.rs  main.rs
