[package]
name = "blogic"
version = "0.1.0"
authors = ["Friz64 <friz64mc@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11"
chrono = "0.4"
log = { version = "0.4", features = ["std"] }
clap = "2.33"
specs = "0.14.3"

[dependencies.rendy]
git = "https://github.com/omni-viral/rendy.git"
default-features = false
features = ["command", "descriptor", "factory", "frame", "graph", "memory", "mesh", "shader", "resource", "texture", "util", "wsi", "vulkan"]
